@@ -129,6 +129,8 @@ Chronological list of authors
   - Charlie Cook
   - Yuanyu Chang
   - Michael Quevillon
+  - Hao Tian
+
 
 External code
 -------------
