@@ -27,12 +27,12 @@ from six.moves import range
 
 import numpy as np
 
-from numpy.testing import assert_equal
+from numpy.testing import assert_equal, assert_almost_equal
 
 import MDAnalysis as mda
 from MDAnalysis.analysis import base
 
-from MDAnalysisTests.datafiles import PSF, DCD
+from MDAnalysisTests.datafiles import PSF, DCD, TPR, XTC
 from MDAnalysisTests.util import no_deprecated_call
 
 
@@ -160,6 +160,21 @@ def test_AnalysisFromFunction(u, start, stop, step, nframes):
 
     for ana in (ana1, ana2, ana3):
         assert_equal(results, ana.results)
+
+
+def mass_xyz(atomgroup1, atomgroup2, masses):
+        return atomgroup1.positions * masses
+
+def test_AnalysisFromFunction_args_content(u):
+    protein = u.select_atoms('protein')
+    masses = protein.masses.reshape(-1, 1)
+    another = mda.Universe(TPR, XTC).select_atoms("protein")
+    ans = base.AnalysisFromFunction(mass_xyz, protein, another, masses)
+    assert len(ans.args) == 3
+    result = np.sum(ans.run().results)
+    assert_almost_equal(result, -317054.67757345125, decimal=6)
+    assert (ans.args[0] is protein) and (ans.args[1] is another)
+    assert  ans._trajectory is protein.universe.trajectory
 
 
 def test_analysis_class():
